# fastapi-server-template

./: .gitignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
app/: example.config.py  main.py
app/routers/v1/: __init__.py
tests/: test_main.py
