[tool.poetry]
name = "fastapi-server-template"
version = "0.1.0"
description = "a basic fastapi project template with tortoise orm (postgresql), aerich for migrations, and docker."
authors = ["rgahlyn <rohit@safe.pe>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
tortoise-orm = "^0.24.0"
httpx = "^0.28.1"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
aerich = {extras = ["toml"], version = "^0.8.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
